apps/dev/gateway/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: gateway
spec:
  type: ExternalName
  externalName: auth-service.auth.svc.cluster.local
  ports:
    - port: 80
