apps/dev/gateway/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: gateway
spec:
  type: ExternalName
  externalName: user-service.user.svc.cluster.local
  ports:
    - port: 80
