apps/dev/gateway/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: gateway
spec:
  selector:
    app: user-service  # Zorg dat de Deployment in de `auth` namespace deze label heeft
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
